syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "heartbeat.proto";
package empty.registry.v1;

message RegisterRequest {
    string name = 1;
    string endpoint = 2;
}
message RegisterResponse {
    string id = 1;
}
message UnregisterRequest {
    string name = 1;
    string id = 2;
}

message LoginRequest {
    string name = 1;// 服务名
}

message MicroService {
    string id = 1;// 服务id
    string name = 2;// 服务名
    string endpoint = 3;// 接口地址
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}
message MicroServices {
    repeated MicroService services = 1;
}

message GetRequest {
    string name = 1;
}
message ListRequest {
    string name = 1;
}

service RegistryService {
    rpc register (RegisterRequest) returns (RegisterResponse) { }
    rpc unregister (UnregisterRequest) returns (google.protobuf.Empty) { }
    rpc get (GetRequest) returns (MicroService) { }
    rpc list (ListRequest) returns (MicroServices) { }
    rpc all (google.protobuf.Empty) returns (MicroServices) { }
}